fix SDKRD-6358:The JSON file is inconsistent with the Complete Demo file and lacks the area to highlight the fields corresponding to the highlighter

--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
@@ -65,6 +65,10 @@
                 "color" : "#ffff00",
                 "opacity" : 1.0
             },
+            "areaHighlight": {
+                "color": "#ffff00",
+                "opacity": 1.0
+            },
             "underline": {
                 "color" : "#66cc33",
                 "opacity" : 1.0
@@ -109,6 +113,11 @@
                 "color" : "#ff0000",
                 "opacity" : 1.0,
                 "thickness" : 2
+            },
+            "highlighter": {
+                "color" : "#ffff00",
+                "opacity" : 0.5,
+                "thickness" : 12
             },
             "polygon": {
                 "color" : "#ff0000",
