--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
@@ -1,11 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          android:versionCode="1" 
-          android:versionName="1.0" 
-          package="com.foxit.pdf.viewer" 
-          android:installLocation="auto"    
-          xmlns:tools="http://schemas.android.com/tools">
-  
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.foxit.pdf.viewer" android:installLocation="auto" xmlns:tools="http://schemas.android.com/tools">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="30" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
@@ -13,30 +7,18 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
 	<uses-permission android:name="com.android.email.permission.READ_ATTACHMENT" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-    <queries>
-      <intent>
-        <action android:name="android.intent.action.TTS_SERVICE" />
-      </intent>
-    </queries>
-  
-	<application name="Com.Foxit.MyApplication"
-               android:allowBackup="true"
-               android:icon="@mipmap/ic_launcher" 
-               android:roundIcon="@mipmap/ic_launcher_round" 
-               android:supportsRtl="true"  
-               tools:replace="android:theme" 
-               android:theme="@style/AppTheme" 
-               android:requestLegacyExternalStorage="true"
-               android:preserveLegacyExternalStorage="true"
-               android:label="@string/app_name">
-  </application>
+	<queries>
+		<intent>
+			<action android:name="android.intent.action.TTS_SERVICE" />
+		</intent>
+	</queries>
+	<application name="Com.Foxit.MyApplication" android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" tools:replace="android:theme" android:theme="@style/AppTheme" android:requestLegacyExternalStorage="true" android:preserveLegacyExternalStorage="true" android:label="@string/app_name"></application>
 </manifest>
