--- a/foxit_xamarin_android/FoxitMobileScanningRDK/FoxitMobileScanningRDK/FoxitMobileScanningRDK.csproj
+++ b/foxit_xamarin_android/FoxitMobileScanningRDK/FoxitMobileScanningRDK/FoxitMobileScanningRDK.csproj
@@ -14,9 +14,9 @@
     <AssemblyName>FoxitMobileScanningRDK</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
-    <AndroidCodegenTarget>XamarinAndroid</AndroidCodegenTarget>
+    <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
