--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.foxit.pdf.viewer" android:installLocation="auto" xmlns:tools="http://schemas.android.com/tools">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="30" />
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="33" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -17,5 +17,5 @@
 			<action android:name="android.intent.action.TTS_SERVICE" />
 		</intent>
 	</queries>
-	<application name="Com.Foxit.MyApplication" android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" tools:replace="android:theme" android:theme="@style/AppTheme" android:requestLegacyExternalStorage="true" android:preserveLegacyExternalStorage="true" android:label="@string/app_name"></application>
+	<application name="Com.Foxit.MyApplication" android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:supportsRtl="true" tools:replace="android:theme" android:theme="@style/AppTheme" android:requestLegacyExternalStorage="true" android:preserveLegacyExternalStorage="true" android:label="@string/app_name"></application>
 </manifest>
