Upload .net support

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ foxit_xamarin_ios/Foxit.iOS.Scanning.UI/.vs
 foxit_xamarin_ios/FoxitRDKDemo/packages
 foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/obj
 foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/.vs
+foxit_xamarin_ios/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/.vs
