--- a/foxit_xamarin_ios/nuspec/Foxit.iOS.Scanning.UI.nuspec
+++ b/foxit_xamarin_ios/nuspec/Foxit.iOS.Scanning.UI.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata minClientVersion="">
     <id>Foxit.iOS.Scanning.UI</id>
-    <version>2.2.0</version>
+    <version>2.2.0.1</version>
     <title>Foxit.iOS.Scanning.UI</title>
     <authors>Foxit Software Incorporated</authors>
     <owners>Foxit Software Incorporated</owners>
@@ -25,16 +25,35 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</description>
     <language></language>
     <dependencies>
       <group targetFramework="Xamarin.iOS1.0">
-        <dependency id="Foxit.iOS" version="8.4" />
-        <dependency id="Foxit.iOS.UIExtensions" version="8.4" />
+        <dependency id="Foxit.iOS" version="8.4.0.1" />
+        <dependency id="Foxit.iOS.UIExtensions" version="8.4.0.1" />
+      </group>
+      <group targetFramework="net6.0-ios11.0">
+        <dependency id="System.Runtime.InteropServices.NFloat.Internal" version="6.0.1" exclude="Build,Analyzers" />
+        <dependency id="Foxit.iOS" version="8.4.0.1" />
+        <dependency id="Foxit.iOS.UIExtensions" version="8.4.0.1" />
       </group>
     </dependencies>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="mscorlib" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Numerics" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Numerics.Vectors" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Xml" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="Xamarin.iOS" targetFramework="Xamarin.iOS1.0" />
+    </frameworkAssemblies>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="Xamarin.iOS1.0" />
       <frameworkAssembly assemblyName="Xamarin.iOS" targetFramework="Xamarin.iOS1.0" />
     </frameworkAssemblies>
   </metadata>
   <files>
-      <file src="LICENSE.txt" target="" />
+      <file src="../LICENSE.txt" target="" />
+      <file src="../libs/FoxitPDFScanUI.framework.zip" target="runtimes/FoxitPDFScanUI.framework.zip" />
+      <file src="../Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI.Nuget.targets" target="build/Foxit.iOS.Scanning.UI.targets" />
+      <file src="../Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI.Nuget.targets" target="buildTransitive/Foxit.iOS.Scanning.UI.targets" />
+      <file src="../Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/bin/Release/net6.0-ios/Foxit.iOS.Scanning.UI.dll" target="lib/net6.0-ios11.0" />
+      <file src="../Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/bin/Release/xamarin.ios10/Foxit.iOS.Scanning.UI.dll" target="lib/xamarin.ios10" />
   </files>
 </package>
