--- a/foxit_xamarin_ios/nuspec/Foxit.iOS.nuspec
+++ b/foxit_xamarin_ios/nuspec/Foxit.iOS.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata minClientVersion="">
     <id>Foxit.iOS</id>
-    <version>8.4</version>
+    <version>8.4.0.1</version>
     <title>Foxit.iOS</title>
     <authors>Foxit Software Incorporated</authors>
     <owners>Foxit Software Incorporated</owners>
@@ -24,13 +24,30 @@ the website https://developers.foxitsoftware.com/pdf-sdk/</description>
     <language></language>
     <dependencies>
       <group targetFramework="Xamarin.iOS1.0" />
+      <group targetFramework="net6.0-ios11.0">
+        <dependency id="System.Runtime.InteropServices.NFloat.Internal" version="6.0.1" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework="net6.0-maccatalyst13.1">
+        <dependency id="System.Runtime.InteropServices.NFloat.Internal" version="6.0.1" exclude="Build,Analyzers" />
+      </group>
     </dependencies>
     <frameworkAssemblies>
+      <frameworkAssembly assemblyName="mscorlib" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="Xamarin.iOS1.0" />
       <frameworkAssembly assemblyName="System" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Numerics" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Numerics.Vectors" targetFramework="Xamarin.iOS1.0" />
+      <frameworkAssembly assemblyName="System.Xml" targetFramework="Xamarin.iOS1.0" />
       <frameworkAssembly assemblyName="Xamarin.iOS" targetFramework="Xamarin.iOS1.0" />
     </frameworkAssemblies>
   </metadata>
   <files>
-      <file src="LICENSE.txt" target="" />
+      <file src="../LICENSE.txt" target="" />
+      <file src="../libs/FoxitRDK.xcframework.zip" target="runtimes/FoxitRDK.xcframework.zip" />
+      <file src="../Foxit.iOS/Foxit.iOS/Foxit.iOS.Nuget.targets" target="build/Foxit.iOS.targets" />
+      <file src="../Foxit.iOS/Foxit.iOS/Foxit.iOS.Nuget.targets" target="buildTransitive/Foxit.iOS.targets" />
+      <file src="../Foxit.iOS/Foxit.iOS/bin/Release/net6.0-ios/Foxit.iOS.dll" target="lib/net6.0-ios11.0" />
+      <file src="../Foxit.iOS/Foxit.iOS/bin/Release/xamarin.ios10/Foxit.iOS.dll" target="lib/xamarin.ios10" />
+      <file src="../Foxit.iOS/Foxit.iOS/bin/Release/net6.0-maccatalyst/Foxit.iOS.dll" target="lib/net6.0-maccatalyst13.1" />
   </files>
 </package>
