--- a/foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI.csproj
+++ b/foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI.csproj
@@ -6,9 +6,6 @@
 
       <_IsIOS>false</_IsIOS>
       <_IsIOS Condition="$(IsXamarinIOS) or '$(TargetFramework)'=='net6.0-ios'">true</_IsIOS>
-
-      <_IsCatalyst>false</_IsCatalyst>
-      <_IsCatalyst Condition="$(_IsCatalyst) or '$(TargetFramework)'=='net6.0-maccatalyst'">true</_IsCatalyst>
   </PropertyGroup>
   <PropertyGroup>
       <TargetFrameworks>xamarin.ios10;net6.0-ios</TargetFrameworks>
@@ -17,11 +14,10 @@
       <ImplicitUsings>true</ImplicitUsings>
       <IsBindingProject>true</IsBindingProject>
       <NoBindingEmbedding>true</NoBindingEmbedding>
+      <NoBindingEmbedding  Condition="$(IsXamarinIOS)">false</NoBindingEmbedding>
       <OutputType>Library</OutputType>
       <SupportedOSPlatformVersion Condition="$(_IsIOS)">11.0</SupportedOSPlatformVersion>
-      <SupportedOSPlatformVersion Condition="$(_IsCatalyst)">13.1</SupportedOSPlatformVersion>
 	  <TargetPlatformVersion Condition="$(_IsIOS)">11.0</TargetPlatformVersion>
-	  <TargetPlatformVersion Condition="$(_IsCatalyst)">13.1</TargetPlatformVersion>
       <RootNamespace>Foxit.iOS.Scanning.UI</RootNamespace>
       <AssemblyName>Foxit.iOS.Scanning.UI</AssemblyName>
       <AssemblyVersion>2.2.0.1</AssemblyVersion>
